gcc/testsuite/g++.dg/modules/p0713-3.C
int k;
module frob; // { dg-error "expected" }
